--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -1,27 +1,28 @@
-<p id="notice"><%= notice %></p>
 
-<h1>Cities</h1>
+<form action="/cities" method="GET">
+  <label for="estado">Estado:</label>
+  <input type="text" id="estado" name="estado" value="<%= @searchstate %>"></p>
+  <p><label for="city">Cidade:</label>
+  <input type="text" id="cidade" name="cidade" value="<%= @searchcity %>"></p>
+  <input type="submit" value="Pesquisar">
+</form>
+
+<h1>Cidades</h1>
+<p id="notice"><%= notice %></p>
 
 <table>
   <thead>
-    <tr>
-      <th>City name</th>
-      <th colspan="3"></th>
-    </tr>
   </thead>
 
   <tbody>
     <% @cities.each do |city| %>
       <tr>
         <td><%= city.city_name %></td>
-        <td><%= link_to 'Show', city %></td>
-        <td><%= link_to 'Edit', edit_city_path(city) %></td>
-        <td><%= link_to 'Destroy', city, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Mostrar detalhes', city %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
 
-<%= link_to 'New City', new_city_path %>
+<br>
