--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -1,11 +1,10 @@
 <p id="notice"><%= notice %></p>
-
-<h1>States</h1>
+<h1>Estados</h1>
 
 <table>
   <thead>
     <tr>
-      <th>State name</th>
+      <th>Nome dos Estados</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,14 +13,10 @@
     <% @states.each do |state| %>
       <tr>
         <td><%= state.state_name %></td>
-        <td><%= link_to 'Show', state %></td>
-        <td><%= link_to 'Edit', edit_state_path(state) %></td>
-        <td><%= link_to 'Destroy', state, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Mostrar cidades', state %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New State', new_state_path %>
